--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -5,346 +5,268 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - alsa-lib=1.2.8
-  - arrow-cpp=11.0.0
-  - asgiref=3.6.0
+  - alsa-lib=1.2.3.2
+  - asgiref=3.5.2
   - attr=2.5.1
-  - attrs=23.1.0
-  - aws-c-auth=0.6.26
-  - aws-c-cal=0.5.26
-  - aws-c-common=0.8.17
-  - aws-c-compression=0.2.16
-  - aws-c-event-stream=0.2.20
-  - aws-c-http=0.7.7
-  - aws-c-io=0.13.21
-  - aws-c-mqtt=0.8.6
-  - aws-c-s3=0.2.8
-  - aws-c-sdkutils=0.1.9
-  - aws-checksums=0.1.14
-  - aws-crt-cpp=0.19.9
-  - aws-sdk-cpp=1.10.57
-  - bokeh=3.1.0
+  - attrs=21.4.0
+  - bokeh=2.4.3
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.18.1
-  - ca-certificates=2023.5.7
-  - cairo=1.16.0
-  - cartopy=0.21.1
-  - certifi=2023.5.7
-  - cffi=1.15.1
+  - ca-certificates=2022.5.18.1
+  - cartopy=0.20.2
+  - certifi=2022.5.18.1
+  - cffi=1.15.0
   - click=8.1.3
-  - cloudpickle=2.2.1
-  - colorama=0.4.6
-  - configobj=5.0.8
-  - contourpy=1.0.7
-  - cryptography=40.0.2
-  - curl=8.0.1
+  - cloudpickle=2.1.0
+  - configobj=5.0.6
+  - cryptography=37.0.2
+  - curl=7.83.1
   - cycler=0.11.0
-  - cython=0.29.34
-  - cytoolz=0.12.0
-  - dask=2023.4.1
-  - dask-core=2023.4.1
+  - cython=0.29.30
+  - cytoolz=0.11.2
+  - dask=2022.5.1
+  - dask-core=2022.5.1
   - dbus=1.13.6
-  - distributed=2023.4.1
-  - django=3.2.16
-  - eccodes=2.29.0
-  - exceptiongroup=1.1.1
-  - expat=2.5.0
+  - distributed=2022.5.1
+  - django=3.2.12
+  - eccodes=2.26.0
+  - expat=2.4.8
   - fftw=3.3.10
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
   - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
+  - fontconfig=2.14.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.39.3
+  - fonttools=4.33.3
   - freeglut=3.2.2
-  - freetype=2.12.1
-  - fsspec=2023.5.0
-  - geos=3.11.2
-  - gettext=0.21.1
-  - gflags=2.2.2
+  - freetype=2.10.4
+  - fsspec=2022.5.0
+  - geos=3.10.2
+  - gettext=0.19.8.1
   - giflib=5.2.1
-  - glib=2.76.2
-  - glib-tools=2.76.2
-  - glog=0.6.0
-  - graphite2=1.3.13
-  - gst-plugins-base=1.22.0
-  - gstreamer=1.22.0
-  - gstreamer-orc=0.4.33
-  - harfbuzz=6.0.0
+  - gst-plugins-base=1.20.2
+  - gstreamer=1.20.2
   - hdf4=4.2.15
-  - hdf5=1.12.2
+  - hdf5=1.12.1
   - heapdict=1.0.1
   - icu=70.1
-  - idna=3.4
-  - importlib-metadata=6.6.0
-  - importlib-resources=5.12.0
-  - importlib_metadata=6.6.0
-  - importlib_resources=5.12.0
-  - iniconfig=2.0.0
-  - intel-openmp=2022.1.0
-  - jack=1.9.22
-  - jasper=4.0.0
+  - idna=3.3
+  - importlib-metadata=4.11.4
+  - importlib_metadata=4.11.4
+  - iniconfig=1.1.1
+  - jack=1.9.18
+  - jasper=2.0.33
   - jinja2=3.1.2
   - jpeg=9e
-  - json-c=0.16
+  - json-c=0.15
   - keyutils=1.6.1
-  - kiwisolver=1.4.4
-  - krb5=1.20.1
-  - lame=3.100
-  - lcms2=2.15
-  - ld_impl_linux-64=2.40
-  - lerc=4.0.0
-  - libabseil=20230125.0
+  - kiwisolver=1.4.2
+  - krb5=1.19.3
+  - lcms2=2.12
+  - ld_impl_linux-64=2.36.1
+  - lerc=3.0
   - libaec=1.0.6
-  - libarrow=11.0.0
   - libblas=3.9.0
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
-  - libcap=2.67
+  - libcap=2.51
   - libcblas=3.9.0
-  - libclang=15.0.7
-  - libclang13=15.0.7
-  - libcrc32c=1.1.2
+  - libclang=14.0.3
+  - libclang13=14.0.3
   - libcups=2.3.3
-  - libcurl=8.0.1
+  - libcurl=7.83.1
   - libdb=6.2.32
-  - libdeflate=1.17
+  - libdeflate=1.10
   - libedit=3.1.20191231
   - libev=4.33
   - libevent=2.1.10
-  - libexpat=2.5.0
   - libffi=3.4.2
-  - libflac=1.4.2
-  - libgcc-ng=12.2.0
-  - libgcrypt=1.10.1
-  - libgfortran-ng=12.2.0
-  - libgfortran5=12.2.0
-  - libglib=2.76.2
+  - libflac=1.3.4
+  - libgcc-ng=12.1.0
+  - libgfortran-ng=12.1.0
+  - libgfortran5=12.1.0
+  - libglib=2.70.2
   - libglu=9.0.0
-  - libgomp=12.2.0
-  - libgoogle-cloud=2.8.0
-  - libgpg-error=1.46
-  - libgrpc=1.54.1
-  - libiconv=1.17
+  - libgomp=12.1.0
+  - libiconv=1.16
   - liblapack=3.9.0
-  - libllvm14=14.0.6
-  - libllvm15=15.0.7
-  - libnetcdf=4.9.1
-  - libnghttp2=1.52.0
+  - libllvm14=14.0.3
+  - libnetcdf=4.8.1
+  - libnghttp2=1.47.0
   - libnsl=2.0.0
-  - libnuma=2.0.16
   - libogg=1.3.4
-  - libopenblas=0.3.23
+  - libopenblas=0.3.20
   - libopus=1.3.1
-  - libpng=1.6.39
-  - libpq=15.2
-  - libprotobuf=3.21.12
-  - libsndfile=1.2.0
-  - libsqlite=3.41.2
+  - libpng=1.6.37
+  - libpq=14.3
+  - libsndfile=1.0.31
   - libssh2=1.10.0
-  - libstdcxx-ng=12.2.0
-  - libsystemd0=253
-  - libthrift=0.18.1
-  - libtiff=4.5.0
-  - libtool=2.4.7
-  - libudev1=253
-  - libutf8proc=2.8.0
-  - libuuid=2.38.1
+  - libstdcxx-ng=12.1.0
+  - libtiff=4.3.0
+  - libtool=2.4.6
+  - libuuid=2.32.1
   - libvorbis=1.3.7
-  - libwebp=1.2.4
-  - libwebp-base=1.2.4
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
   - libxcb=1.13
-  - libxkbcommon=1.5.0
-  - libxml2=2.10.3
-  - libzip=1.9.2
-  - libzlib=1.2.13
+  - libxkbcommon=1.0.3
+  - libxml2=2.9.14
+  - libzip=1.8.0
+  - libzlib=1.2.11
   - locket=1.0.0
-  - lz4=4.3.2
-  - lz4-c=1.9.4
-  - markupsafe=2.1.2
-  - matplotlib=3.7.1
-  - matplotlib-base=3.7.1
-  - mkl=2022.1.0
-  - mpg123=1.31.3
-  - msgpack-python=1.0.5
+  - lz4=4.0.0
+  - lz4-c=1.9.3
+  - markupsafe=2.1.1
+  - matplotlib=3.5.2
+  - matplotlib-base=3.5.2
+  - msgpack-python=1.0.3
   - munkres=1.1.4
-  - mysql-common=8.0.32
-  - mysql-libs=8.0.32
+  - mysql-common=8.0.29
+  - mysql-libs=8.0.29
   - ncurses=6.3
-  - nspr=4.35
-  - nss=3.89
-  - numpy=1.24.3
-  - openjpeg=2.5.0
-  - openssl=3.1.0
-  - orc=1.8.3
-  - packaging=23.1
-  - pandas=1.5.3
-  - parquet-cpp=1.5.1
-  - partd=1.4.0
+  - nspr=4.32
+  - nss=3.78
+  - openjpeg=2.4.0
+  - openssl=1.1.1o
+  - packaging=21.3
+  - pandas=1.4.2
+  - partd=1.2.0
   - pcre=8.45
-  - pcre2=10.40
-  - pillow=9.4.0
-  - pip=23.1.2
-  - pixman=0.40.0
+  - pillow=9.1.1
+  - pip=22.1.1
   - pluggy=1.0.0
-  - ply=3.11
-  - proj=9.2.0
-  - psutil=5.9.5
+  - proj=9.0.0
+  - psutil=5.9.1
   - pthread-stubs=0.4
-  - pulseaudio=16.1
-  - pulseaudio-client=16.1
-  - pulseaudio-daemon=16.1
+  - pulseaudio=14.0
   - py=1.11.0
-  - pyarrow=11.0.0
   - pycparser=2.21
   - pygrib=2.1.4
-  - pykdtree=1.3.7.post0
-  - pyopenssl=23.1.1
+  - pykdtree=1.3.4
+  - pyopenssl=22.0.0
   - pyparsing=3.0.9
-  - pyproj=3.5.0
-  - pyqt=5.15.7
-  - pyqt5-sip=12.11.0
-  - pyresample=1.26.1
-  - pyshp=2.3.1
+  - pyproj=3.3.1
+  - pyqt=5.15.4
+  - pyqt5-sip=12.9.0
+  - pyresample=1.23.0
+  - pyshp=2.3.0
   - pysocks=1.7.1
-  - pytest=7.3.1
+  - pytest=7.1.2
   - python=3.8.13
   - python-dateutil=2.8.2
   - python_abi=3.8
-  - pytz=2023.3
+  - pytz=2022.1
   - pyyaml=6.0
-  - qt-main=5.15.8
-  - re2=2023.02.02
-  - readline=8.2
-  - s2n=1.3.42
-  - scipy=1.9.3
-  - setuptools=64.0.0
-  - shapely=2.0.1
-  - sip=6.7.9
+  - qt-main=5.15.3
+  - readline=8.1
+  - scipy=1.8.1
+  - setuptools=62.3.2
+  - shapely=1.8.2
+  - sip=6.5.1
   - six=1.16.0
-  - snappy=1.1.10
   - sortedcontainers=2.4.0
-  - sqlite=3.41.2
-  - sqlparse=0.4.4
+  - sqlite=3.38.5
+  - sqlparse=0.4.2
   - tblib=1.7.0
   - tk=8.6.12
   - toml=0.10.2
   - tomli=2.0.1
-  - toolz=0.12.0
-  - tornado=6.3
-  - typing_extensions=4.5.0
-  - ucx=1.14.0
-  - unicodedata2=15.0.0
-  - urllib3=2.0.2
-  - wheel=0.40.0
-  - xcb-util=0.4.0
-  - xcb-util-image=0.4.0
-  - xcb-util-keysyms=0.4.0
-  - xcb-util-renderutil=0.3.9
-  - xcb-util-wm=0.4.1
-  - xkeyboard-config=2.38
+  - toolz=0.11.2
+  - tornado=6.1
+  - typing_extensions=4.2.0
+  - unicodedata2=14.0.0
+  - urllib3=1.26.9
+  - wheel=0.37.1
   - xorg-fixesproto=5.0
   - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
-  - xorg-libx11=1.8.4
+  - xorg-libx11=1.7.2
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
   - xorg-libxfixes=5.0.3
   - xorg-libxi=1.7.10
-  - xorg-libxrender=0.9.10
-  - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
-  - xyzservices=2023.2.0
-  - xz=5.2.6
+  - xz=5.2.5
   - yaml=0.2.5
-  - zict=3.0.0
-  - zipp=3.15.0
-  - zlib=1.2.13
+  - zict=2.2.0
+  - zipp=3.8.0
+  - zlib=1.2.11
   - zstd=1.5.2
   - pip:
     - amqp==5.1.1
-    - ascat==2.1.0
+    - ascat==2.0.4
     - asciitree==0.3.3
     - async-timeout==4.0.2
     - billiard==3.6.4.0
     - c3s-sm==0.1.2
-    - cadati==0.0.4
-    - cdsapi==0.6.1
-    - celery==5.2.7
-    - cf-xarray==0.8.1
-    - cftime==1.6.2
-    - charset-normalizer==3.1.0
+    - cadati==0.0.2
+    - cdsapi==0.5.1
+    - celery==5.2.6
+    - cftime==1.6.0
+    - charset-normalizer==2.0.12
     - click-didyoumean==0.3.0
     - click-plugins==1.1.1
     - click-repl==0.2.0
-    - colorcet==3.0.1
-    - configparser==5.3.0
-    - coverage==7.2.5
-    - datedown==0.4
+    - colorcet==3.0.0
+    - configparser==5.2.0
+    - coverage==6.4
+    - datedown==0.3
     - deprecated==1.2.13
-    - django-countries==7.5.1
-    - django-rest-passwordreset==1.3.0
+    - django-countries==7.3.2
+    - django-rest-passwordreset==1.2.1
     - django-widget-tweaks==1.4.12
-    - djangorestframework==3.14.0
-    - drf-yasg==1.21.5
+    - djangorestframework==3.12.4
+    - drf-yasg==1.20.0
     - ease-grid==0.2
     - ecmwf-api-client==1.6.3
-    - ecmwf-models==0.9.2
-    - entrypoints==0.4
+    - ecmwf-models==0.7
     - esa-cci-sm==0.1.1
-    - fasteners==0.18
-    - gldas==0.7.0
-    - h5netcdf==1.1.0
-    - h5py==3.8.0
-    - ismn==1.3.3
-    - joblib==1.2.0
+    - gldas==0.6.1
+    - h5netcdf==0.11.0
+    - fasteners==0.17.3
+    - h5py==3.7.0
     - kombu==5.2.4
-    - llvmlite==0.40.0
-    - lxml==4.9.2
-    - more-itertools==9.1.0
-    - netcdf4==1.6.3
-    - numba==0.57.0
-    - numcodecs==0.11.0
-    - param==1.13.0
+    - llvmlite==0.38.1
+    - lxml==4.8.0
+    - more-itertools==8.13.0
+    - netcdf4==1.5.8
+    - numba==0.55.1
+    - numcodecs==0.9.1
+    - numpy==1.21.6
+    - param==1.12.1
     - parse==1.19.0
-    - prompt-toolkit==3.0.38
-    - psycopg2-binary==2.9.6
-    - pyct==0.5.0
-    - pygeobase==0.6.2
+    - prompt-toolkit==3.0.29
+    - psycopg2-binary==2.9.3
+    - pyct==0.4.8
+    - pygeobase==0.4.0
     - pygeogrids==0.4.2
-    - pynetcf==0.5.0
-    - pytesmo==0.15.1
-    - pytest-cov==4.0.0
+    - pynetcf==0.2.2
+    - pytesmo==0.14.3
+    - pytest-cov==3.0.0
     - pytest-django==4.5.2
-    - pytest-mpl==0.16.1
-    - qa4sm-preprocessing==0.2
-    - qa4sm-reader==0.9
-    - redis==4.5.5
-    - repurpose==0.9
-    - requests==2.30.0
-    - ruamel-yaml==0.17.26
-    - ruamel-yaml-clib==0.2.7
-    - scikit-learn==1.2.2
-    - seaborn==0.12.2
-    - smap-io==0.5
+    - pytest-mpl==0.15.1
+    - redis==4.3.1
+    - repurpose==0.8
+    - requests==2.27.1
+    - seaborn==0.11.2
+    - smap-io==0.4
     - smecv-grid==0.3
     - smos==0.2
-    - threadpoolctl==3.1.0
-    - tqdm==4.65.0
+    - tqdm==4.64.0
     - trollsift==0.2.1
-    - uritemplate==4.1.1
     - vine==5.0.0
-    - wcwidth==0.2.6
-    - wrapt==1.15.0
-    - xarray==2023.1.0
-    - zarr==2.14.2
+    - wcwidth==0.2.5
+    - wrapt==1.14.1
+    - xarray==0.18.2
+    - zarr==2.11.3
+    - ismn==1.3.3
+    - qa4sm-reader==0.9
+    - qa4sm-preprocessing==0.2
